# Agents-Exp

./: README.md  pyproject.toml
agents/: README.md  basic_react_agent.py
docs/: BASIC_RAG_REACT_AGENT.md
memory_strategies/: __init__.py  base.py  full_history.py  recent_k.py  sliding_window_summary.py  token_based.py
scripts/: run_basic_react_rag_agent.py
tools/: __init__.py
tools/examples/: __init__.py  test_tools.py
tools/rag/: X_rag_tool.py  __init__.py  company_x_rag_tool.py  example_rag_tool.py
utils/: __init__.py
utils/logging/: logger.py
utils/running_agent/: interactive.py  pretty_print.py
vector_db/: __init__.py
vector_db/chunking/: base.py  pdf_chunker.py
vector_db/embedding/: embedding_manager.py
vector_db/scripts/: run_chunking.py  run_ingestion_faiss.py  run_search.py
vector_db/vector_db/: faiss_client.py  milvus_client.py
